--- a/Aceshi/ceshi.css
+++ b/Aceshi/ceshi.css
@@ -28,6 +28,9 @@ body{
     background-color: #888;
     position: relative;
 }
+.icon-bar {
+  background-color: white;
+}
 .head{
   background-color: rgb(108, 0, 250);
   width: 100%;
