--- a/danmu/danmu.css
+++ b/danmu/danmu.css
@@ -1,20 +1,25 @@
-.qiang{
-    background:transparent ;
+.xianshi{
+     position: relative; 
+    overflow: hidden;
     width: 500px;
     height: 400px;
-    margin: 300px auto 0px;
+    margin: 100px auto 0px;
+    padding-bottom: 60px;
+    border: 3px solid black;    
+}
+.qiang{
+    width: 100%;
+    height: 100%;
     border: 3px solid black;
 }
 .qiang-xia{
+    position: absolute;
     height: 60px;
-    width: 500px;
-    margin: 0 auto;
+    width: 100%;
     background: blue;
-    border: 1px solid black;
+
 }
 #message{
     margin: 15px 0px 15px 100px;
 }
-.dancang{
-display: flex;
-}
+
